@@ -88,7 +88,7 @@ JHtml::_('behavior.noframes');
 </div>
 <div id="footer">
 	<p class="copyright">
-		<?php $joomla= '<a href="http://www.joomla.org">Joomla!</a>';
+		<?php $joomla= '<a href="http://www.joomla.org">Joomla!®</a>';
 		echo JText::sprintf('JGLOBAL_ISFREESOFTWARE', $joomla) ?>
 	</p>
 </div>
