@@ -50,7 +50,7 @@ JFactory::getDocument()->addScriptDeclaration($script);
 			</div>
 		</div>
 		<div id="copyright">
-			<?php $joomla= '<a href="http://www.joomla.org">Joomla!</a>';
+			<?php $joomla= '<a href="http://www.joomla.org">Joomla!®</a>';
 			echo JText::sprintf('JGLOBAL_ISFREESOFTWARE', $joomla) ?>
 		</div>
 	</body>
